alter history in any order fix numeric find/delete/clear from cell menu indicate whitespace improve menu layout

--- a/ui/ui-app/src/main/resources/static/js/feed-mgr/visual-query/transform-data/transform-data.component.css
+++ b/ui/ui-app/src/main/resources/static/js/feed-mgr/visual-query/transform-data/transform-data.component.css
@@ -199,6 +199,12 @@ thinkbig-visual-query-transform md-progress-linear.md-kylo-theme.wrangler-indete
   background-color: transparent !important;
   opacity: 1;
 }
+thinkbig-visual-query-transform span.ws-text {
+  color: coral;
+  margin-right: 2px;
+  margin-left: 2px;
+  font-weight: bold;
+}
 
 /**
   Override toolbar buttons
